# patch-match-opencv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/patch_match_opencv/: adapters.h
include/patch_match_opencv/distances/: euclidian.h
include/patch_match_opencv/maps/: distance_map_2d.h  offset_map_2d.h
include/patch_match_opencv/patch_servers/: base_patch_server.h  masked_patches.h  pixel_iterators.h  whole_image_patches.h
lib/: catch.hpp
src/: masked_patches.h  patch_distances.h  patch_matcher.h  patch_matcher_utils.h
src/maps/: maps_2d.h
src/patch_match_opencv/maps/: maps_2d.h
src/patch_servers/: masked_patches.h  pixel_iterators.h  whole_image_patches.h
test/: main.cpp  test_masked_patches.cpp  test_patch_distances.cpp  test_patch_matcher.cpp  test_utils.h
test/dummies/: distance.h  dummy_iterator.h  maps.h  patch_servers.h  structs.h
test/patch_match_opencv/: test_patch_distances.cpp  test_patch_matcher.cpp
test/patch_match_opencv/patch_servers/: test_masked_patches.cpp  test_whole_image_patches.cpp
test/patch_servers/: test_masked_patches.cpp  test_whole_image_patches.cpp
